Changes monday 26 jan
- Change folder names structure
- Modify code to erase 'symbol' column

--- a/load_data.ipynb
+++ b/load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 1,
    "id": "f1f34bfc",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "9cf2c562",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5d30a8b7",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "05299fca",
    "metadata": {},
    "outputs": [],
@@ -56,16 +56,18 @@
     "\n",
     "for year in years:\n",
     "    for month in range(1, 13):\n",
-    "        month_path = f'data/{year}/{month:02d}'\n",
+    "        month_path = f'data/year={year}/month={month:02d}'\n",
     "        os.makedirs(month_path, exist_ok=True)\n",
     "\n",
     "        mask = (xrp_data.index.year == year) & (xrp_data.index.month == month)\n",
-    "        df_month = xrp_data.loc[mask]\n",
+    "        df_month = xrp_data.loc[mask].copy()\n",
     "        \n",
     "        if not df_month.empty:\n",
+    "            if 'symbol' in df_month.columns:\n",
+    "                df_month = df_month.drop(columns=['symbol'])\n",
+    "            \n",
     "            ruta = f'{month_path}/XRP_{year}_{month:02d}.csv'\n",
-    "            df_month.to_csv(ruta, index=True)\n",
-    "            # print(f'Archivo guardado: {ruta} ({len(df_month)} datos)')"
+    "            df_month.to_csv(ruta, index=True)"
    ]
   }
  ],
