Update de load_data
- Delete symbol column before the loop

--- a/load_data.ipynb
+++ b/load_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "f1f34bfc",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "9cf2c562",
    "metadata": {},
    "outputs": [],
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "id": "5d30a8b7",
    "metadata": {},
    "outputs": [],
@@ -38,6 +38,124 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "058a7702",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Borrado de columna 'symbol'\n",
+    "if 'symbol' in xrp_data.columns:\n",
+    "    xrp_data = xrp_data.drop(columns=['symbol'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8f80f704",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>open</th>\n",
+       "      <th>high</th>\n",
+       "      <th>low</th>\n",
+       "      <th>close</th>\n",
+       "      <th>volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>datetime</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-02-22 01:00:00</th>\n",
+       "      <td>0.54568</td>\n",
+       "      <td>0.64900</td>\n",
+       "      <td>0.51430</td>\n",
+       "      <td>0.56601</td>\n",
+       "      <td>2.188946e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-23 01:00:00</th>\n",
+       "      <td>0.56640</td>\n",
+       "      <td>0.57101</td>\n",
+       "      <td>0.36840</td>\n",
+       "      <td>0.47612</td>\n",
+       "      <td>2.102771e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-24 01:00:00</th>\n",
+       "      <td>0.47661</td>\n",
+       "      <td>0.50006</td>\n",
+       "      <td>0.45155</td>\n",
+       "      <td>0.46863</td>\n",
+       "      <td>8.026300e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-25 01:00:00</th>\n",
+       "      <td>0.46874</td>\n",
+       "      <td>0.48253</td>\n",
+       "      <td>0.42474</td>\n",
+       "      <td>0.43597</td>\n",
+       "      <td>7.216955e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-02-26 01:00:00</th>\n",
+       "      <td>0.43608</td>\n",
+       "      <td>0.45124</td>\n",
+       "      <td>0.41100</td>\n",
+       "      <td>0.42831</td>\n",
+       "      <td>7.862250e+07</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                        open     high      low    close        volume\n",
+       "datetime                                                             \n",
+       "2021-02-22 01:00:00  0.54568  0.64900  0.51430  0.56601  2.188946e+08\n",
+       "2021-02-23 01:00:00  0.56640  0.57101  0.36840  0.47612  2.102771e+08\n",
+       "2021-02-24 01:00:00  0.47661  0.50006  0.45155  0.46863  8.026300e+07\n",
+       "2021-02-25 01:00:00  0.46874  0.48253  0.42474  0.43597  7.216955e+07\n",
+       "2021-02-26 01:00:00  0.43608  0.45124  0.41100  0.42831  7.862250e+07"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "xrp_data.head()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "14a65df6",
    "metadata": {},
@@ -47,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "05299fca",
    "metadata": {},
    "outputs": [],
@@ -62,10 +180,7 @@
     "        mask = (xrp_data.index.year == year) & (xrp_data.index.month == month)\n",
     "        df_month = xrp_data.loc[mask].copy()\n",
     "        \n",
-    "        if not df_month.empty:\n",
-    "            if 'symbol' in df_month.columns:\n",
-    "                df_month = df_month.drop(columns=['symbol'])\n",
-    "            \n",
+    "        if not df_month.empty:            \n",
     "            ruta = f'{month_path}/XRP_{year}_{month:02d}.csv'\n",
     "            df_month.to_csv(ruta, index=True)"
    ]
